--- a/kyoshoku.css
+++ b/kyoshoku.css
@@ -1,14 +1,19 @@
+/*マージン*/
+.mgr-10{
+    margin-right : 10px;
+}
+
 /* ボタン全体 */
 .flowbtn10{
 display:inline-block;	
 font-size:35px;
 text-decoration:none;
 transition:.5s;
-color:#444;	
+color:#111111;	
 }
-/* インスタ・pocket・ラインだけ少し大きく */
+/* インスタ・pocket・ラインだけ少し大きくしない*/
 .flowbtn10 .fa-instagram,.flowbtn10 .fa-get-pocket,.flowbtn10 .fa-get-pocket,.flowbtn10 .fa-line .fa-discord{
-font-size:38px;
+font-size:35px;
 }
 /* Twitterマウスホバー時 */
 .flowbtn10 .fa-twitter:hover{
