--- a/kyoshoku.css
+++ b/kyoshoku.css
@@ -2,6 +2,22 @@
 .mgr-10{
     margin-right : 10px;
 }
+/*フッタを最下部に固定して表示*/
+html, body {
+  height: 100%;
+  margin: 0;
+}
+.wrapper {
+  min-height: 100%;
+ 
+  /* フッタの高さと等しいネガティブマージン */
+  /* また最後の子要素の潜在的なマージンとしても機能 */
+  margin-bottom: -50px;
+}
+.footer,
+.push {
+  height: 50px;
+}
 
 /* ボタン全体 */
 .flowbtn10{
