--- a/kyoshoku.css
+++ b/kyoshoku.css
@@ -1,16 +1,11 @@
-/*マージン*/
-.mgr-10{
-    margin-right : 10px;
-}
-
 /*フッタを最下部に固定して表示*/
 * {
    box-sizing: border-box;
 }
 
 body {
-   margin: 0;
-   padding: 0;
+   margin: auto;
+   padding: auto;
    font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", メイリオ, Meiryo, "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;
    background-color: #e6e6e6;
 }
