--- a/kyoshoku.css
+++ b/kyoshoku.css
@@ -1,13 +1,7 @@
 /*フッタを最下部に固定して表示*/
-* {
-box-sizing: border-box;
-width: 100%;
-padding: 5px;
-}
-
 body {
 margin: 50px; /* bodyの外側の余白を指定する */
-padding: 50px 10px 50px 10px; /* bodyの内側余白を指定する(上:右:下:左) */
+padding: 10px; /* bodyの内側余白を指定する(上:右:下:左) */
 font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", メイリオ, Meiryo, "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;
 background-color: #e6e6e6;
 }
