--- a/kyoshoku.css
+++ b/kyoshoku.css
@@ -23,6 +23,11 @@ h1 {
    margin: 0; padding: 0;
    font-size: 20px;
 }
+a {	
+   text-decoration: none;
+   color: #4b4b4b;
+   font-weight: bold;
+}
 .sample a {	
    text-decoration: none;
    color: #4b4b4b;
@@ -42,6 +47,31 @@ ul {
 }
 nav {
    margin: 0 0 0 auto;
+}
+.main-visual {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 100vh;
+   background: url('.main-visual {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 100vh;
+   background: url('main_visual.jpg') top center / cover no-repeat;
+}
+h2 {
+   margin: 0;
+   font-size: 30px;
+   font-weight: normal;
+   color: #fff;
+}.jpg') top center / cover no-repeat;
+}
+h2 {
+   margin: 0;
+   font-size: 30px;
+   font-weight: normal;
+   color: #fff;
 }
 /* ボタン全体 */
 .flowbtn10{
