--- a/kyoshoku.css
+++ b/kyoshoku.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 * {
    box-sizing: border-box;
 }
@@ -17,29 +18,35 @@ header {
    display: flex;
    align-items: center;
 }
-.main-visual {
-      background: url("https://github.com/inuma-manabu/inuma-manabu.josai.math.kyoshoku.io/math-1500720_1280.jpg") 
-}
-footer {
-    background-color: transparent;
-    align-items: center;
-    }
 h1 {
    margin: 0; padding: 0;
    font-size: 20px;
 }
-a {	
-   text-decoration: none;
-   color: #4b4b4b;
-   font-weight: bold;
+h2 {
+   margin: 0;
+   font-size: 30px;
+   font-weight: normal;
+   color: #fff;
 }
+.main-visual {
+   padding: 0 4%;
+   background: url("https://github.com/inuma-manabu/inuma-manabu.josai.math.kyoshoku.io/math-1500720_1280.jpg") 
+}
+   
+footer {
+    background-color: transparent;
+    align-items: center;
+    }
+address {
+font-style: normal;
+}
+
 .sample a {	
    text-decoration: none;
-   color: #4b4b4b;
+   color: #fff;
 }
-ul {
-   list-style: none;
-   margin: 5px;
+nav {
+   margin: 0 0 0 auto;
 }
 .sample ul {
    list-style: none;
@@ -50,18 +57,119 @@ ul {
    margin: 0 0 0 15px;
    font-size: 14px;
 }
-nav {
-   margin: 0 0 0 auto;
+
+.sp-nav {
+   display: none;
 }
-h2 {
-   margin: 0;
-   font-size: 30px;
-   font-weight: normal;
-   color: #fff;
-}
-address{
-font-style:normal;
-}
+
+@media screen and (max-width: 640px) {
+   .pc-nav {
+      display: none;
+   }
+   .sp-nav {
+      z-index: 1;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      display: block;
+      width: 100%;
+      background: rgba(0, 0, 0, .8);
+      opacity: 0;
+      transform: translateY(-100%);
+      transition: all .2s ease-in-out;
+   }
+   #hamburger {
+      position: relative;
+      display: block;
+      width: 30px;
+      height: 25px;
+      margin: 0 0 0 auto;
+   }
+   #hamburger span {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 2px;
+      background-color: #fff;
+      transform: translateY(-50%);
+   }
+   #hamburger::before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background-color: #fff;
+   }
+   #hamburger::after {
+      content: '';
+      display: block;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 70%;
+      height: 2px;
+      background-color: #fff;
+   }
+   /*スマホメニュー*/
+   .sp-nav ul {
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+   }
+   .sp-nav li {
+      margin: 0;
+      padding: 0;
+   }
+   .sp-nav li span {
+      font-size: 15px;
+      color: #fff;
+   }
+   .sp-nav li a, .sp-nav li span {
+      display: block;
+      padding: 20px 0;
+   }
+   /*-閉じるアイコンー*/
+   .sp-nav .close {
+      position: relative;
+      padding-left: 20px;
+   }
+   .sp-nav .close::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 0;
+      display: block;
+      width: 16px;
+      height: 1px;
+      background: #fff;
+      transform: rotate( 45deg );
+   }
+   .sp-nav .close::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 0;
+      display: block;
+      width: 16px;
+      height: 1px;
+      background: #fff;
+      transform: rotate( -45deg );
+   }
+   .toggle {
+      transform: translateY( 0 );
+      opacity: 1;
+   }
+  
 /* ボタン全体 */
 .flowbtn10{
 display:inline-block;	
