--- a/kyoshoku.css
+++ b/kyoshoku.css
@@ -2,7 +2,7 @@ body {
    /*margin: 0;*/
    /*padding: 0;*/
    /*font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", メイリオ, Meiryo, "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
-   background-color: #41593a;
+   background-color: #d0e6ca;
    letter-spacing : 0.2em;
 }
 header {
