--- a/kyoshoku.css
+++ b/kyoshoku.css
@@ -13,18 +13,14 @@ header {
 }
 a {	
    text-decoration: none;
-   color: #111111;
    font-weight: bold;
+}
+a:hover{
+　text-decoration: underline;
 }
 ul {
    list-style: none;
-   margin: 0;
-   /*display: flex;*/
-}
-li {
-   margin: 0 0 0 15px;
-   /*font-size: 14px;*/
-}
+   }
 
 address{
 font-style: normal;
